--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgresPlusDialect
-        show_sql: 'true'
+        show_sql: 'false'
     hibernate:
       ddl-auto: none
 server:
