--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,16 @@ spring:
         show_sql: 'false'
     hibernate:
       ddl-auto: none
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: login!!!
+    password: password!!!
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls.enable: true
 server:
   port: '8092'
 
