--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,8 @@ spring:
     ansi:
       enabled: always
   datasource:
-    url: ${DB_URL:jdbc:postgresql://localhost:5432/postgres}
+#    url: ${DB_URL:jdbc:postgresql://localhost:5432/postgres}
+    url: jdbc:postgresql://${DB_HOST:localhost:5432}/postgres
     username: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
@@ -16,7 +17,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgresPlusDialect
-        show_sql: 'false'
+        show_sql: 'true'
     hibernate:
       ddl-auto: none
   mail:
